fix : margin size in games-button__wrap block

--- a/src/start-page/start-page.css
+++ b/src/start-page/start-page.css
@@ -79,7 +79,7 @@
     gap: 40px;
     flex-direction: row;
     justify-content: space-evenly;
-    margin: 50px 0 100px 0;
+    margin: 0 0 100px 0;
 }
 
 .about-us__info {
